--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ header {
     flex-direction: row;
     align-items: center;
     height: 15vh;
+    gap: 40px;
+    padding: 20px;
 }
 
 p {
@@ -101,11 +103,13 @@ header img {
 
 nav ul {
     list-style: none;
+    column-gap: 10px;
     margin-top: 10px; /* Adicionado espaçamento acima dos links */
 }
 
 nav ul li {
     margin-bottom: 10px; /* Adicionado espaçamento entre os itens de menu */
+    padding: 10px;
 }
 
 nav ul li a {
@@ -142,6 +146,11 @@ nav ul li a {
     display: grid;
 }
 
+.contato img{
+    column-gap: 10px;
+    padding: 10px;
+}
+
 footer {
     background-color: #b6789a;
     color: #ffffff;
@@ -174,9 +183,10 @@ footer {
     }
 
     #portfolio {
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Restaure o layout em grade */
+        grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)); /* Restaure o layout em grade */
         max-width: 1200px; /* Restaure a largura máxima */
         margin: 0 auto;
+        column-gap: 100px;
     }
 
     .projeto {
